# gala-plank-preview-plugin

./: meson.build
plugin/: DBusServer.vala  Main.vala  ScaledWindowClone.vala  Utils.vala  WindowPreviewActor.vala
